plugins/devkit/devkit-java-tests/testData/inspections/presentation/DeprecatedIcon.java
import com.intellij.ide.presentation.Presentation;

@Presentation(icon = "<error descr="'Chrome16' is deprecated">AllIcons.Xml.Browsers.Chrome16</error>")
public class DeprecatedIcon {
}